# djpb

./: .gitignore  setup.cfg
djpb/: __init__.py  custom_field.py  django_to_proto.py  drf_serializers.py  gen_proto.py  proto_gen.py  proto_to_django.py  registry.py  rest_framework_serializer.py  serializer.py  serializers.py  signals.py  stubs.py  util.py
djpb/drf/: __init__.py  parsers.py  renderers.py  serializers.py
djpb/management/commands/: gen_proto.py
