[metadata]
name = djpb
version = 0.19.0
url = https://github.com/scientifichackers/djpb
author = Dev Aggarwal,
author_email = devxpy@gmail.com

[options]
python_requires = >=3.8.0
install_requires =
    django >= 3.1
    protobuf
packages=find:

[options.extras_require]
dev =
    twine
drf =
    djangorestframework
    msgpack
